hphp/hack/test/ifc/check/dynamic.php.exp
=== IFC analysis results for dynamic.php
File "dynamic.php", line 28, characters 3-21:
Unable to analyze information flow for dynamic. This might be unsafe. (Typing[4385])
File "dynamic.php", line 33, characters 3-20:
Unable to analyze information flow for dynamic. This might be unsafe. (Typing[4385])
File "dynamic.php", line 38, characters 3-17:
Unable to analyze information flow for dynamic. This might be unsafe. (Typing[4385])
File "dynamic.php", line 51, characters 3-25:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "dynamic.php", line 9, characters 14-21:
  Leakage sink
File "dynamic.php", line 51, characters 3-25:
Context-implicit policy leaks into `PUBLIC` via `C`. (Typing[4380])
  File "dynamic.php", line 9, characters 14-21:
  Leakage sink
File "dynamic.php", line 51, characters 3-25:
Context-implicit policy leaks into `PUBLIC` via `A_lump`. (Typing[4380])
  File "dynamic.php", line 38, characters 3-17:
  Another program point contributing to the leakage
  File "dynamic.php", line 9, characters 14-21:
  Leakage sink
File "dynamic.php", line 51, characters 3-25:
Context-implicit policy leaks into `PUBLIC` via `A`. (Typing[4380])
  File "dynamic.php", line 38, characters 3-17:
  Another program point contributing to the leakage
  File "dynamic.php", line 9, characters 14-21:
  Leakage sink
File "dynamic.php", line 45, characters 3-24:
Context-implicit policy leaks into `A_lump` via `PRIVATE`. (Typing[4380])
  File "dynamic.php", line 28, characters 3-21:
  Another program point contributing to the leakage
  File "dynamic.php", line 6, characters 14-22:
  Leakage source
File "dynamic.php", line 23, characters 3-24:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "dynamic.php", line 6, characters 14-22:
  This may be the data source with policy `PRIVATE`
  File "dynamic.php", line 9, characters 14-21:
  This may be the data sink with policy `PUBLIC`
  File "dynamic.php", line 18, characters 3-15:
  Another program point contributing to the illegal flow
